crates/lang/tests/ui/storage_item/fail/atomic_guard_is_false_for_non_atomic.rs
use ink_storage::{
    traits::AtomicGuard,
    StorageValue,
};

#[ink_lang::storage_item]
#[derive(Default)]
struct NonAtomic {
    a: StorageValue<u128>,
}

fn main() {
    let _: &dyn AtomicGuard<true> = &NonAtomic::default();
}
